Add Save docs 2 AFDS equivalentes